Ensure long domains wrap to next line in dialog

--- a/client/blocks/simple-site-rename-form/style.scss
+++ b/client/blocks/simple-site-rename-form/style.scss
@@ -95,6 +95,8 @@
 	}
 
 	.simple-site-rename-form__confirmation-detail-copy {
+		word-break: break-word;
+
 		@include breakpoint( '>660px' ) {
 			margin-left: 24px;
 		}
